<resources>
    <!--main activity-->
    <string name="app_name">Bowler-Pro</string>
    <string name="signIN_button">Sign In</string>
    <string name="signOUT_button">Sign Out</string>
    <string name="game_log_button">Log Game</string>
    <string name="stats_button">Player Stats</string>
    <string name="league">League Info</string>
    <string name="admin_button">Manage System</string>


    <!--sign in-->
    <string name="sign_in_label">Sign In / Create Account</string>
    <string name="user_text">Username</string>
    <string name="password">Password</string>
    <string name="create_acct">Create Account</string>


    <!--game log-->
    <string name="game_log_label">Log Game</string>
    <string name="score_text">Score</string>
    <string name="strikes">Strikes</string>
    <string name="spares">Spares</string>
    <string name="open_frames">Open Frames</string>
    <string name="submit_game">Submit Game</string>

    <!--player stats-->
    <string name="stats_label">Player Stats</string>
    <string name="avg">Avg. Score:</string>
    <string name="game_date">Game Date</string>

    <!--admin-->
    <string name="add_group">Add Group</string>
    <string name="remove_group">Remove Group</string>
    <string name="game_logs">View Game Logs</string>
    <string name="create_group">Create Group</string>
    <string name="home_button">Return Home</string>

    <!--league-->
    <string name="join_group">Join Group</string>

    <!--toasts-->
    <string name="sign_in_toast">Sign In First</string>

</resources>
